# yolo

./: .gitignore  Readme.md  pyproject.toml  requirement.txt
dataset/: dataset.yaml
dataset/labels/: train.cache  val.cache
dataset/labels/train/: generated_1002_page10.txt  generated_1002_page11.txt  generated_1002_page12.txt  generated_1002_page14.txt  generated_1002_page15.txt  generated_1002_page16.txt  generated_1002_page17.txt  generated_1002_page18.txt  generated_1002_page20.txt  generated_1002_page21.txt  generated_1002_page23.txt  generated_1002_page24.txt  generated_1002_page25.txt  generated_1002_page26.txt  generated_1002_page27.txt  generated_1002_page28.txt  generated_1002_page30.txt  generated_1002_page32.txt  generated_1002_page33.txt  generated_1002_page35.txt  generated_1002_page36.txt  generated_1002_page37.txt  generated_1002_page38.txt  generated_1002_page39.txt  generated_1002_page8.txt  generated_1002_page9.txt  generated_4016_page32.txt  generated_4016_page33.txt  generated_4016_page34.txt  generated_4016_page35.txt  generated_4016_page36.txt  generated_4016_page37.txt  generated_4017_page0.txt  generated_4017_page2.txt  generated_4017_page3.txt  generated_4017_page4.txt
dataset/labels/val/: generated_0_page11.txt  generated_0_page18.txt  generated_0_page22.txt  generated_0_page25.txt  generated_0_page35.txt  generated_0_page8.txt  generated_1127_page10.txt  generated_1127_page15.txt  (+16 more)
modules/utils/: config.py
modules/yolov10/: __init__.py  config.json  test.py
scripts/: test.py  train.py
yolo.egg-info/: PKG-INFO  SOURCES.txt
